--- a/package.json
+++ b/package.json
@@ -25,19 +25,20 @@
     "build": "vite build; vue-tsc -p tsconfig.lib.json",
     "preversion": "pnpm test && pnpm build; git add dist/"
   },
-  "dependencies": {
-    "@andreasphil/design-system": "github:andreasphil/design-system#v0.34.0",
-    "vue": "^3.4.35"
+  "peerDependencies": {
+    "@andreasphil/design-system": "github:andreasphil/design-system#v0.36.0",
+    "vue": "^3.5.12"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/user-event": "^14.5.2",
     "@testing-library/vue": "^8.1.0",
-    "@vitejs/plugin-vue": "^5.1.2",
-    "jsdom": "^24.1.1",
-    "typescript": "^5.5.4",
-    "vite": "^5.3.5",
-    "vitest": "^2.0.5",
-    "vue-tsc": "^2.0.29"
-  }
+    "@vitejs/plugin-vue": "^5.1.4",
+    "jsdom": "^25.0.1",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.10",
+    "vitest": "^2.1.3",
+    "vue-tsc": "^2.1.8"
+  },
+  "packageManager": "pnpm@9.12.2"
 }
